--- a/index.html
+++ b/index.html
@@ -919,6 +919,11 @@ curl_close($ch);
 <td>If set to array of IDs, will return specific company deals requested</td>
 </tr>
 <tr>
+<td>last_updated_at</td>
+<td>&quot;&quot;</td>
+<td>String date in &quot;YYYY-MM-DD&quot; format will return company deals updated on given date</td>
+</tr>
+<tr>
 <td>limit</td>
 <td>20</td>
 <td>Limit of company deals returned for each request</td>
