publish: changed meta json
generated from commit 2df343ccf0f3566da366d3b4d876dda87079d003

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <h1 id='introduction'>Introduction</h1>
 <p>Welcome to the TraverseIQ API! You can use our API to access TraverseIQ API endpoints, which can get information on private companies, investor preference and firm data, capital markets deals, and related professionals in our database.</p>
 
-<p>Our RESTful API is easy to use across Shell, Ruby, PHP, Javascript and Python. You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
+<p>Our RESTful API is easy to use across Shell, Ruby, PHP, Javascript, and Python. You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
 <h1 id='authentication'>Authentication</h1>
 <blockquote>
 <p>To authorize, use this code:</p>
