publish: added similar companies
generated from commit 299383fb479bb9db8a709fb29685806a7e22e6f8

--- a/index.html
+++ b/index.html
@@ -515,6 +515,44 @@ curl_close($ch);
         </span><span class="s2">"stat_as_of_date"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2016-08-01"</span><span class="w">
       </span><span class="p">}</span><span class="w">
     </span><span class="p">],</span><span class="w">
+    </span><span class="s2">"similar_companies"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
+      </span><span class="p">{</span><span class="w">
+        </span><span class="s2">"score"</span><span class="p">:</span><span class="mf">0.680977112334716</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"self"</span><span class="p">:</span><span class="s2">"https://traverseiq.com/api/v1/companies/4265"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"name"</span><span class="p">:</span><span class="s2">"Lyft"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"tags"</span><span class="p">:[</span><span class="w">
+          </span><span class="s2">"mobile app"</span><span class="p">,</span><span class="s2">"freight, logistics &amp; transportation"</span><span class="p">,</span><span class="s2">"sharing economy / collaborative consumption"</span><span class="p">,</span><span class="s2">"crowd-sourcing"</span><span class="p">,</span><span class="s2">"consumer services"</span><span class="p">,</span><span class="s2">"peer-to-peer technology (P2P)"</span><span class="p">,</span><span class="s2">"transportation apps"</span><span class="p">,</span><span class="s2">"car sharing"</span><span class="p">,</span><span class="s2">"technology"</span><span class="w">
+        </span><span class="p">],</span><span class="w">
+        </span><span class="s2">"description"</span><span class="p">:</span><span class="s2">"Lyft is a mobile app for friendly, affordable rides at the tap of a button."</span><span class="w">
+      </span><span class="p">},</span><span class="w">
+      </span><span class="p">{</span><span class="w">
+        </span><span class="s2">"score"</span><span class="p">:</span><span class="mf">0.663174383134928</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"self"</span><span class="p">:</span><span class="s2">"https://traverseiq.com/api/v1/companies/53550"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"name"</span><span class="p">:</span><span class="s2">"Turo"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"tags"</span><span class="p">:[</span><span class="w">
+          </span><span class="s2">"online marketplace"</span><span class="p">,</span><span class="s2">"travel services"</span><span class="p">,</span><span class="s2">"travel"</span><span class="p">,</span><span class="s2">"sharing economy / collaborative consumption"</span><span class="p">,</span><span class="s2">"consumer services"</span><span class="p">,</span><span class="s2">"transportation apps"</span><span class="p">,</span><span class="s2">"automotive aftermarket"</span><span class="p">,</span><span class="s2">"car sharing"</span><span class="p">,</span><span class="s2">"technology"</span><span class="p">,</span><span class="s2">"car rentals"</span><span class="w">
+        </span><span class="p">],</span><span class="w">
+        </span><span class="s2">"description"</span><span class="p">:</span><span class="s2">"Turo is a car sharing marketplace where local car owners provide travelers with the perfect vehicle for their next adventure. Travelers from around the world choose from a unique selection of cars and car owners earn extra money while helping fuel their adventures. A pioneer of the sharing economy and travel industry, Turo is a safe, supportive community where the car you rent is part of a story, not a fleet. Whether it's an F-150 truck to help out on moving day, a Tesla for a luxurious weekend away, or a classic Mercedes-Benz for a picture-perfect road trip, travelers rent the car and own the adventure."</span><span class="w">
+      </span><span class="p">},</span><span class="w">
+      </span><span class="p">{</span><span class="w">
+        </span><span class="s2">"score"</span><span class="p">:</span><span class="mf">0.597646606434268</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"self"</span><span class="p">:</span><span class="s2">"https://traverseiq.com/api/v1/companies/74389"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"name"</span><span class="p">:</span><span class="s2">"GetTransfer Limited"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"tags"</span><span class="p">:[</span><span class="w">
+          </span><span class="s2">"online marketplace"</span><span class="p">,</span><span class="s2">"travel services"</span><span class="p">,</span><span class="s2">"travel"</span><span class="p">,</span><span class="s2">"consumer services"</span><span class="p">,</span><span class="s2">"booking software"</span><span class="p">,</span><span class="s2">"technology"</span><span class="p">,</span><span class="s2">"travel technology"</span><span class="p">,</span><span class="s2">"car rentals"</span><span class="p">,</span><span class="s2">"chauffeurs"</span><span class="w">
+        </span><span class="p">],</span><span class="w">
+        </span><span class="s2">"description"</span><span class="p">:</span><span class="s2">"GetTransfer Limited is an online marketplace for pre-booked long distance transfers in Europe and US. GetTransfer.com is an online platform for pre-booked transfers and car rental with driver. The service operates worldwide."</span><span class="w">
+      </span><span class="p">},</span><span class="w">
+      </span><span class="p">{</span><span class="w">
+        </span><span class="s2">"score"</span><span class="p">:</span><span class="mf">0.566962900849199</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"self"</span><span class="p">:</span><span class="s2">"https://traverseiq.com/api/v1/companies/52555"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"name"</span><span class="p">:</span><span class="s2">"Skurt"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"tags"</span><span class="p">:[</span><span class="w">
+          </span><span class="s2">"mobile app"</span><span class="p">,</span><span class="s2">"cars &amp; automotives"</span><span class="p">,</span><span class="s2">"travel services"</span><span class="p">,</span><span class="s2">"travel"</span><span class="p">,</span><span class="s2">"transportation apps"</span><span class="p">,</span><span class="s2">"delivery software"</span><span class="p">,</span><span class="s2">"technology"</span><span class="p">,</span><span class="s2">"car rentals"</span><span class="w">
+        </span><span class="p">],</span><span class="w">
+        </span><span class="s2">"description"</span><span class="p">:</span><span class="s2">"Skurt is a Los Angeles, CA-based rental car delivery startup. Skurt gives people the opportunity to have a car delivered to their hotel, home, office, or anywhere else they are via iOS and Android apps."</span><span class="w">
+      </span><span class="p">}</span><span class="w">
+    </span><span class="p">],</span><span class="w">
     </span><span class="s2">"target_company_people"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
       </span><span class="p">{</span><span class="w">
         </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Vicente Pascual"</span><span class="p">,</span><span class="w">
