publish: Merge branch 'master' of https://github.com/graphitall-trav/slate
generated from commit 2d487733de321ea5d7c437772dd10dfd125c3b51

--- a/index.html
+++ b/index.html
@@ -895,6 +895,11 @@ curl_close($ch);
 <td>Stats of target company (e.g. employees, revenue, growth %)</td>
 </tr>
 <tr>
+<td>similar_companies</td>
+<td>Array</td>
+<td>Similar companies to target company and similarity scores)</td>
+</tr>
+<tr>
 <td>target_company_people</td>
 <td>Array</td>
 <td>Employees/Related professionals of target company</td>
